--- a/assets/css/modern-business.css
+++ b/assets/css/modern-business.css
@@ -15,6 +15,46 @@ body {
     padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+.navbar-default {
+    border-color: #ba120a;
+    border-bottom-width: 2px;
+}
+
+.page-header {
+    border-bottom: 1px solid #ba120a;
+}
+
+.panel-empresariais {
+    border-color: #ba120a;
+}
+
+.panel-empresariais .panel-heading {
+    color:white;
+    background-color: #ba120a;
+}
+
+.panel-info {
+    border-color: #31708f;
+}
+
+.panel-info .panel-heading {
+    color: white;
+    background-color: #31708f;
+}
+
+.panel-success {
+    border-color: #A1D476;
+}
+
+.panel-success .panel-heading {
+    color: white;
+    background-color: #A1D476;
+}
+/*
+.panel-success .btn {
+    background-color: #A1D476;
+}
+*/
 .img-portfolio {
     margin-bottom: 30px;
 }
@@ -73,12 +113,25 @@ footer {
     margin: 50px 0;
 }
 
+.panel-body {
+    min-height: 220px;
+}
+
+.panel-footer {
+    background-color: transparent;
+    border: none;
+}
+
 /* Responsive Styles */
 
 @media(max-width:991px) {
     .customer-img,
     .img-related {
         margin-bottom: 30px;
+    }
+
+    .panel-body {
+        min-height: 300px;
     }
 }
 
