Add Passeio do Boquilobo and better promotion block

--- a/themes/tejus/source/css/tejus/promotion.less
+++ b/themes/tejus/source/css/tejus/promotion.less
@@ -24,6 +24,7 @@
     -webkit-box-shadow: 0 0 10px #888;
     -moz-box-shadow: 0 0 10px #888;
     box-shadow: 0 0 10px #888;
+    width: 200px;
 
     a {
       border: 1px solid #faa;
@@ -36,7 +37,15 @@
       text-decoration: none;
       /* shadow */
       text-shadow: 0 0 5px #444;
+
     }
+  }
+
+  h3 {
+    color: #fff;
+    position: absolute;
+    bottom: 10px;
+    margin: 20px;
   }
 }
 
