--- a/themes/tejus/source/css/tejus/homepage.less
+++ b/themes/tejus/source/css/tejus/homepage.less
@@ -1,4 +1,34 @@
 
+header.carousel {
+  h2, h3 {
+      position: relative;
+      bottom: 40%;
+      background-color: rgba(255, 255, 255, 0.75);
+      text-align: right;
+      width: 33%;
+      text-transform: uppercase;
+      @media screen and (max-width: 1000px) {
+          width: 50%;
+      }
+      @media screen and (max-width: 650px) {
+          width: 75%;
+      }
+      @media screen and (max-width: 500px) {
+          width: 100%;
+      }
+  }
+
+  h2 {
+      margin: 0;
+      padding: 10px 15px;
+  }
+
+  h3 {
+      margin: 5px 0 0;
+      padding: 5px 15px;
+  }
+}
+
 .panel-heading {
   padding: 15px 15px 0 15px;
 
