Make logo bigger in the navbar

--- a/themes/tejus/source/css/variables.less
+++ b/themes/tejus/source/css/variables.less
@@ -22,5 +22,5 @@
 //
 // Tejus Variables
 // ---------------------
-@logo-height: @navbar-height - (@navbar-padding-vertical * 2);
-@logo-width: 68px;
+@logo-height: @navbar-height - 21px;
+@logo-width: 100px;
