Add footer logos for trip advisor, rnaat and turismo natureza

--- a/themes/tejus/source/css/theme.less
+++ b/themes/tejus/source/css/theme.less
@@ -6,5 +6,6 @@
 @import "variables.less";
 
 @import "tejus/navbar.less";
+@import "tejus/footer.less";
 @import "tejus/homepage.less";
 @import "tejus/promotion.less";
